--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,8 @@
   --text-color: #757575;
   --secondary-text-color: #ffffff;
   --titels-color: #212121;
+  --light-background-color: #f5f4fa;
+  --dark-background-color: #2f303a;
 }
 
 .link-reset {
@@ -21,6 +23,15 @@ button {
   font-family: inherit;
 }
 
+.section-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--titels-color);
+}
+
 /* Header */
 
 .logo {
@@ -29,6 +40,9 @@ button {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
+}
+
+.header-logo {
   color: #000000;
 }
 
@@ -44,7 +58,7 @@ button {
   color: var(--titels-color);
 }
 
-.contact-link {
+.header-contact-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -54,8 +68,8 @@ button {
 
 .nav-link:hover,
 .nav-link:focus,
-.contact-link:hover,
-.contact-link:focus,
+.header-contact-link:hover,
+.header-contact-link:focus,
 .current {
   color: var(--accent-color);
 }
@@ -63,7 +77,7 @@ button {
 /* Section Hero */
 
 .hero {
-  background-color: #2f303a;
+  background-color: var(--dark-background-color);
 }
 .main-title {
   font-weight: 900;
@@ -106,4 +120,48 @@ button {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--text-color);
+}
+
+/* Section Team */
+
+.team {
+  background-color: var(--light-background-color);
+}
+
+.team-subtitle {
+  font-weight: 500;
+  color: var(--titels-color);
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+}
+
+.team-descr {
+  font-weight: 400;
+  color: var(--text-color);
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+}
+
+/* Footer */
+.footer {
+  background-color: var(--dark-background-color);
+}
+
+.footer-logo {
+  color: var(--secondary-text-color);
+}
+
+.footer-contact {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  color: var(--secondary-text-color);
+}
+
+.footer-contact-link {
+  color: rgba(255, 255, 255, 0.6);
 }
